008-ingress-nginx/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      run: web
  replicas: 1
  template:
    metadata:
        labels:
            run: web
    spec:
      containers:
      - name: helloworld1
        image: gcr.io/google-samples/hello-app:1.0
